--- a/style.css
+++ b/style.css
@@ -16,8 +16,9 @@ body{
 }
 
 header, body{
+    display: flex;
     height: fit-content;
-    width: max-content;
+    width: 100vw;
     padding: 0;
     margin: 0;
 }
@@ -36,9 +37,9 @@ nav{
     justify-content: space-between;
     align-items: center;
     width: 100vw;
-    height: fit-content;
+    height: 64px;
     color: #222222;
-    padding: 0 10%;
+    padding: 0 10vw;
     position: fixed;
     z-index: 6;
     box-shadow: 0px 1px 2px 0px rgba(0, 0, 0, 0.2);
@@ -58,10 +59,6 @@ nav{
     font-size: 20px;
     font-weight: 500;
 }
-
-nav a{
-    display: block;
-} 
 
 #logo_holder button{
     display: none;            
@@ -146,24 +143,60 @@ nav a{
 
 .hero{
     display: flex;
-    justify-content: center;
+    justify-content: stretch;
     align-items: center;
     width: 100vw;
     height: calc(100vh - 64px);
     padding: 0 10%;
     position: relative;
-
+    overflow-y: hidden;
 }
 
 .hero_container{
     display: flex;
     flex-direction: column;
-    justify-content: start;
-    align-items: center;
+    justify-content: center;
+    align-items: start;
     width: 100%;
     height: 75%;
     max-height: 720px;
+    max-width: 660px;
+    background: #fdffff;
+    z-index: 3;
 }
+
+.hero #hero_mock{
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
+    height: fit-content;
+    width: 60%;
+    position: absolute;
+    right: 0;
+    top: 0;
+}
+
+#hero_mock section{
+    width: 100%;
+    height: calc(100vh - 64px);
+    background-position: center center;
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
+#hero_mock section:nth-of-type(1){
+    background-image: url(Images/kipati/kipati_case_mock.png);
+}
+
+#hero_mock section:nth-of-type(2){
+    background-image: url(Images/clothesxo/mock.png);
+}
+
+#hero_mock section:nth-of-type(3){
+    background-image: url(Images/immers/immers_case_mock.png);
+}
+
+
 
 #case_titles{
     display: flex;
@@ -306,16 +339,16 @@ nav a{
     height: 64px;
 }
 
-/*@keyframes slider {
+@keyframes slider3 {
     0%{transform: translateY(0);}
-    100%{transform: translateY(-1400%);}
+    100%{transform: translateY(calc(192px - 300vh));}
 }
 
-.slide{
-    animation: slider 10.5s steps(14) infinite backwards;
+.slide3{
+    animation: slider3 9s steps(3) infinite backwards;
 }
 
-@keyframes slider7 {
+/*@keyframes slider7 {
     0%{transform: translateY(0);}
     100%{transform: translateY(-700%);}
 }
@@ -326,10 +359,35 @@ nav a{
 
 @keyframes slider_loop {
     0%{transform: translateX(100%);}
-    100%{transform: translateX(-100%);}
+    100%{transform: translateX(calc(-100%));}
 }
 
-#teams2{
+.hover1:hover{
+    background-color: #0f0118;
+    border: white 2px solid;
+    color: white;
+}
+
+.hover2:hover{
+    background-color: #010e04;
+    color: white;
+    border: white 2px solid;
+}
+
+.hover3:hover{
+    background-color: #060505;
+    color: white;
+    border: white 2px solid;
+}
+
+#move{
+    display: flex;
+    justify-content: center;
+    width: fit-content;
+    gap: 104px;
+}
+
+#teams2, #teams3{
     display: flex;
     justify-content: center;
     align-items: center;
@@ -338,11 +396,17 @@ nav a{
     overflow-x: hidden;
     gap: 104px;
     white-space: nowrap;
-    animation: slider_loop 20s linear infinite;
-
 }
 
-#teams2 img, #team3 img{
+#teams2{
+    animation: slider_loop 20s linear forwards infinite;
+}
+
+#teams3{
+    animation: slider_loop 20s linear forwards infinite;
+}
+
+#teams2 img, #teams3 img, #team3 img{
     height: 48px;
 }
 
@@ -1420,6 +1484,92 @@ a, p{
     background-image: url(Images/clothesxo/do.png);
 }
 
+@keyframes loading {
+    from{transform: translateY(-100vh); opacity: 1;}
+    99%{transform: translateY(100vh); opacity: 1; z-index: 7}
+    to{transform: translateY(100vh); opacity: 0; z-index: 0;}
+}
+
+.loader_immers{
+    display: flex;
+    flex-direction: column;
+    justify-content: stretch;
+    align-items: center;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 7;
+    width: 100vw;
+    height: 200vh;
+    animation: loading 2.5s linear 1 forwards;
+}
+
+.loader_immers section:nth-of-type(1){
+    width: 0;
+    height: 0;
+    border-bottom: 100vh solid #010e04;
+    border-left: 100vw solid transparent;
+}
+
+.loader_immers section:nth-of-type(2){
+    width: 100vw;
+    height: 100vh;
+    background-color: #010e04;
+}
+
+.loader_clothesxo{
+    display: flex;
+    flex-direction: column;
+    justify-content: stretch;
+    align-items: center;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 7;
+    width: 100vw;
+    height: 200vh;
+    animation: loading 2.5s linear 1 forwards;
+}
+
+.loader_clothesxo section:nth-of-type(1){
+    width: 0;
+    height: 0;
+    border-bottom: 100vh solid #0f0118;
+    border-left: 100vw solid transparent;
+}
+
+.loader_clothesxo section:nth-of-type(2){
+    width: 100vw;
+    height: 100vh;
+    background-color: #0f0118;
+}
+
+.loader_kipati{
+    display: flex;
+    flex-direction: column;
+    justify-content: stretch;
+    align-items: center;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 7;
+    width: 100vw;
+    height: 200vh;
+    animation: loading 2.5s linear 1 forwards;
+}
+
+.loader_kipati section:nth-of-type(1){
+    width: 0;
+    height: 0;
+    border-bottom: 100vh solid #060505;
+    border-left: 100vw solid transparent;
+}
+
+.loader_kipati section:nth-of-type(2){
+    width: 100vw;
+    height: 100vh;
+    background-color: #060505;
+}
 
  /* 
     
@@ -1431,7 +1581,7 @@ a, p{
 
 @media screen and (max-width:1024px) {
     nav{
-        padding: 0 5%;
+        padding: 0 5vw;
     }
 
     .hero{
@@ -1693,7 +1843,7 @@ a, p{
         justify-content: start;
         align-items: flex-start;
         height: fit-content;
-        padding: 0 5%;
+        padding: 0 5vw;
     }
 
     #logo_holder{
@@ -1701,6 +1851,7 @@ a, p{
         justify-content: space-between;
         height: 72px;
         width: 100%;
+
     }
 
     #logo_holder a{
@@ -1756,8 +1907,15 @@ a, p{
     }
 
 
+
+
     .social_links p{
         display: flex; 
+    }
+
+    .social_links a{
+        display: flex;
+        gap: 32px;
     }
 
     .hero, .section1, .section2, .section3{
@@ -1765,15 +1923,64 @@ a, p{
     }
     
     .hero{
-        padding: 0 5%;
-    
+        display: flex;
+        flex-direction: column;
+        align-items: start;
+        padding: 0;
+        max-height: 720px;
+        overflow-x: hidden;
+
     }
     
     .hero_container{
         align-items: start;
-        width: 100%;
-        height: 80%;
-        max-height: 840px;
+        width: 70%;
+        height: fit-content;
+        padding: 104px 64px 64px 5vw;
+    }
+
+    .hero #hero_mock{
+        display: flex;
+        flex-direction: row;
+        justify-content: start;
+        height: 60vh;
+        width: fit-content;
+        position: absolute;
+        top: 40vh;
+        background-color: #080408;
+        gap: 0;
+        padding: 0;
+    }
+
+
+    .hero #hero_mock section{
+        width: 100vw;
+        height: 60vh;
+        background-position: center center;
+        background-repeat: no-repeat;
+        background-size: cover;
+    }
+
+    #hero_mock section:nth-of-type(1){
+        background-image: url(Images/kipati/kipati_case_mock_moibile.png);
+    }
+    
+    #hero_mock section:nth-of-type(2){
+        background-image: url(Images/clothesxo/mockmobile.png);
+    }
+    
+    #hero_mock section:nth-of-type(3){
+        background-image: url(Images/immers/immers_case_mock_moibile.png);
+    }
+
+   @keyframes slider3 {
+        0%{transform: translateX(0);}
+        100%{transform: translateX(-300vw);}
+    }
+    
+    .slide3{
+        animation: slider3 6s steps(3) backwards infinite;
+        display: none;
     }
 
     #works{
@@ -1873,17 +2080,21 @@ a, p{
     #teams img{
         height: 48px;
     }
-    
-    #teams2{
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        width: 200vw;
-        height: fit-content;
-        gap: 56px;
+
+    #move{
+        gap: 72px;
     }
     
-    #teams2 img{
+    #teams2, #teams3{
+        display: flex;
+        justify-content: ce;
+        align-items: center;
+        width: fit-content;
+        height: fit-content;
+        gap: 72px;
+    }
+    
+    #teams2 img, #teams3 img{
         height: 40px;
     }
 
@@ -2544,13 +2755,18 @@ a, p{
     .hero, .section2, .section3{
         scroll-snap-align: start;
     }
+
+    .hero{
+        display: flex;
+        flex-direction: column;
+        max-height: 800px;
+    }
     
     
     .hero_container{
         align-items: start;
         width: 100%;
-        height: 80%;
-        max-height: 840px;
+        height: 60%;
     }
 
     #works{
@@ -2591,15 +2807,20 @@ a, p{
     #teams img{
         height: 32px;
     }
-    
-    #teams2{
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        height: fit-content;
+
+    #move{
+        gap: 56px;
     }
     
-    #teams2 img{
+    #teams2, #teams3{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: fit-content;
+        gap: 56px;
+    }
+    
+    #teams2 img, #teams3 img{
         height: 20px;
     }
     
